Änderungen in AufgabeNachTeXDatei, writeString anstatt write, lineSeperator als Variable ls, auskommentierter Code entfernt